--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,22 @@ services:
       timeout: 5s
       retries: 10
 
+  logger:
+    image: golang:1.21-alpine
+    container_name: mail_helper_logger
+    volumes:
+      - ./cmd/log_server:/app
+      - ./logs:/logs
+    working_dir: /app
+    command: go run main.go
+    ports:
+      - "8081:8081"
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8081/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
   app:
     build:
       context: .
@@ -27,13 +43,16 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      logger:
+        condition: service_healthy
     volumes:
       - ./:/app
     working_dir: /app
     command: >
-      sh -c "echo 'Waiting for db...'; 
+      sh -c "echo 'Waiting for services...';
              while ! nc -z db 5432; do sleep 1; done;
-             echo 'DB is up! Starting app...';
+             while ! nc -z logger 8081; do sleep 1; done;
+             echo 'All services are up! Starting app...';
              go run ./cmd/main.go"
     ports:
       - "8080:8080"
