--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,21 @@ services:
       timeout: 3s
       retries: 5
 
+  mock-api:
+    image: golang:1.24-alpine
+    container_name: mail_helper_mock_api
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: go run ./cmd/mock_api/main.go
+    ports:
+      - "8082:8082"
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8082/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
   app:
     build:
       context: .
@@ -45,6 +60,8 @@ services:
         condition: service_healthy
       logger:
         condition: service_healthy
+      mock-api:
+        condition: service_healthy
     volumes:
       - ./:/app
     working_dir: /app
@@ -52,6 +69,7 @@ services:
       sh -c "echo 'Waiting for services...';
              while ! nc -z db 5432; do sleep 1; done;
              while ! nc -z logger 8081; do sleep 1; done;
+             while ! nc -z mock-api 8082; do sleep 1; done;
              echo 'All services are up! Starting app...';
              go run ./cmd/main.go"
     ports:
